--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ section{
     display: flex;
     align-items: center;
    justify-content: center;
-    background:url(/images/home.jpg) no-repeat;
+    background:url(images/home.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
